[FEATURE] - fixed the spacing in home + ready for another public

--- a/src/styles/components/Layout/_header.scss
+++ b/src/styles/components/Layout/_header.scss
@@ -2,7 +2,7 @@ div {
   &.header-wrap {
     width: 100vw;
     padding: 0 1rem;
-    z-index: 500;
+    z-index: 9999;
     display: flex;
     justify-content: space-between;
     align-items: center;
